# maxime-challenge

./: .gitignore  README.md  app.py  extend_job.sh
dashboard_config/initializers/: job_extend.rb
jupyter_app/: form.yml.erb  info.html.erb  manifest.yml  submit.yml.erb
jupyter_app/template/: script.sh.erb
jupyterlab-slurm-extend/: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyterlab-slurm-extend/jupyter-config/server-config/: jupyterlab_slurm_extend.json
jupyterlab-slurm-extend/jupyterlab_slurm_extend/: __init__.py  handlers.py
jupyterlab-slurm-extend/src/: index.ts
jupyterlab-slurm-extend/style/: base.css
templates/: index.html
