[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-slurm-extend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ["version", "description", "authors", "urls"]
dependencies = ["jupyter_server>=2.0.1,<3"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_slurm_extend/labextension"]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_slurm_extend/labextension" = "share/jupyter/labextensions/jupyterlab-slurm-extend"
"install.json" = "share/jupyter/labextensions/jupyterlab-slurm-extend/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupyterlab_slurm_extend/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_slurm_extend/labextension/static/style.js",
    "jupyterlab_slurm_extend/labextension/package.json",
]
skip-if-exists = ["jupyterlab_slurm_extend/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_slurm_extend/labextension"
